# fx_market_making

./: .gitignore  CLAUDE.md  README.md  README_simulation.md  main.py  pyproject.toml  run_simulation.py
app/: README_app.md  main.py  main_window.py  result_window.py  style.qss  workers.py
report/: build.py
report/latex/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  references.bib  user_guide.tex
report/latex/sections/: 00_introduction.tex  00b_literature_review.tex  01_orderbook.tex  02_market_simulator.tex  03_quoter.tex  04_book_updates.tex  04_client_flow.tex  05_simulation_loop.tex  06_pnl_inventory.tex  07_backtest_report.tex  08_phase2_calibration.tex  09_phase3_hft.tex  10_conclusion.tex
report/pdfs/: user_guide.aux  user_guide.out  user_guide.toc
src/utils/: __init__.py
src/utils/calibration/: README.md  __init__.py  calibrated_config.py  gamma_optimizer.py  k_calibrator.py  ladder_calibrator.py  spread_calibrator.py  stale_calibrator.py  volatility_calibrator.py
src/utils/client_flow/: README.md  arrival.py  config.py  flow_generator.py  size_model.py
src/utils/hft/: README.md  __init__.py  hft_agent.py  hft_config.py  scenarios.py
src/utils/market_maker/: README.md  __init__.py  pnl_tracker.py  quoter.py  (+1 more)
test/: assembalge.ipynb  client_flow.ipynb  order_book.ipynb  phase2_calibration.ipynb  phase3_hft.ipynb  price_simulation.ipynb  quoter_test.ipynb  report copy.ipynb  report.ipynb  simulation.ipynb  simulation_README.md  test_quoter.ipynb
test/.ipynb_checkpoints/: test_quoter-checkpoint.ipynb
(+32 files in other folders)
